--- a/package.json
+++ b/package.json
@@ -6,21 +6,39 @@
     "start": "next start"
   },
   "dependencies": {
-    "@supabase/ssr": "latest",
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-slot": "^1.0.2",
+    "@supabase/auth-helpers-nextjs": "^0.8.7",
+    "@supabase/ssr": "^0.0.10",
     "@supabase/supabase-js": "latest",
     "autoprefixer": "10.4.15",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
+    "cryptr": "^6.3.0",
     "geist": "^1.0.0",
+    "lodash": "^4.17.21",
+    "lucide-react": "^0.306.0",
     "next": "latest",
-    "postcss": "8.4.29",
+    "next-client-cookies": "^1.1.0",
+    "postcss": "^8.4.33",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.49.2",
+    "react-toastify": "^9.1.3",
+    "tailwind-merge": "^2.2.0",
     "tailwindcss": "3.3.3",
-    "typescript": "5.1.3"
+    "tailwindcss-animate": "^1.0.7",
+    "typescript": "5.1.3",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.202",
     "@types/node": "20.3.1",
     "@types/react": "18.2.8",
     "@types/react-dom": "18.2.5",
+    "@types/uuid": "^9.0.7",
+    "daisyui": "^4.5.0",
     "encoding": "^0.1.13"
   }
 }
